.kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cpesview-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-alias: cpes.policiacivil.go.gov.br
spec:
  tls:
    - hosts:
        - cpes-homo.policiacivil.go.gov.br
        - cpes.policiacivil.go.gov.br
      secretName: certificado-pc
  rules:
    - host: cpes-homo.policiacivil.go.gov.br
      http:
        paths:
          - path: /
            backend:
              serviceName: cpesview-service
              servicePort: 80
